--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 { 
-  "scripts":{
-        "start" : "npm install && node server.js"
-    },
+  "name": "wellness-tracker-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
 
   "dependencies": {
     "bcrypt": "^6.0.0",
