--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
-{ 
+{
   "name": "wellness-tracker-backend",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
+     
   },
-
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
@@ -18,3 +23,4 @@
     "nodemailer": "^7.0.10"
   }
 }
+
